// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots progress/ebay-progress-stepper Blocked 1`] = `
<div
  style={
    {
      "padding": 50,
    }
  }
>
  <div
    className="progress-stepper"
  >
    <div
      className="progress-stepper__items"
      role="list"
    >
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Started
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Shipped
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        aria-current="step"
        className="progress-stepper__item progress-stepper__item--attention"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="current"
            className="icon icon--stepper-attention-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-attention-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Blocked
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Delivered
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress/ebay-progress-stepper Controlled 1`] = `
<div
  style={
    {
      "padding": 50,
    }
  }
>
  <div
    className="progress-stepper"
  >
    <div
      className="progress-stepper__items"
      role="list"
    >
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Step 
          1
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        aria-current="step"
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="current"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Step 
          2
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Step 
          3
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Step 
          4
        </div>
      </div>
    </div>
  </div>
  <p>
    <button
      aria-live={null}
      className="btn btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Back
    </button>
     
    <button
      aria-live={null}
      className="btn btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Forward
    </button>
  </p>
</div>
`;

exports[`Storyshots progress/ebay-progress-stepper Custom Titles 1`] = `
<div
  style={
    {
      "padding": 50,
    }
  }
>
  <div
    className="progress-stepper"
  >
    <div
      className="progress-stepper__items"
      role="list"
    >
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h1>
            H1
          </h1>
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        aria-current="step"
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="current"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <small>
            Small
          </small>
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h2>
            H2
          </h2>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress/ebay-progress-stepper Default 1`] = `
<div
  style={
    {
      "padding": 50,
    }
  }
>
  <div
    className="progress-stepper"
  >
    <div
      className="progress-stepper__items"
      role="list"
    >
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Started
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Shipped
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        aria-current="step"
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="current"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Transit
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Delivered
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress/ebay-progress-stepper Default state: complete 1`] = `
<div
  style={
    {
      "padding": 50,
    }
  }
>
  <div
    className="progress-stepper"
  >
    <div
      className="progress-stepper__items"
      role="list"
    >
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Started
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Shipped
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Transit
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        aria-current="step"
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="current"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          Delivered
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress/ebay-progress-stepper Default state: upcoming 1`] = `
<div
  style={
    {
      "padding": 50,
    }
  }
>
  <div
    className="progress-stepper"
  >
    <div
      className="progress-stepper__items"
      role="list"
    >
      <div
        aria-current="step"
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="current"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h4>
            Paid
          </h4>
          July 3rd
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h4>
            Shipped
          </h4>
          July 4th
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h4>
            Transit
          </h4>
          July 5th
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h4>
            Delivered
          </h4>
          July 6th
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress/ebay-progress-stepper Vertical (column) 1`] = `
<div
  style={
    {
      "padding": 50,
    }
  }
>
  <div
    className="progress-stepper progress-stepper--vertical"
  >
    <div
      className="progress-stepper__items"
      role="list"
    >
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="complete"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h4>
            Order placed
          </h4>
          <p>
            New Mens Addidas Ultra Boost
          </p>
          <p>
            Order total $220
          </p>
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        aria-current="step"
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="current"
            className="icon icon--stepper-confirmation-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-confirmation-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h4>
            Preparing for shipment
          </h4>
          <p>
            We will notify you once it ships.
          </p>
        </div>
      </div>
      <hr
        className="progress-stepper__separator"
        role="presentation"
      />
      <div
        className="progress-stepper__item"
        role="listitem"
      >
        <div
          className="progress-stepper__icon"
        >
          <svg
            aria-hidden={true}
            aria-label="upcoming"
            className="icon icon--stepper-upcoming-24"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-stepper-upcoming-24"
            />
          </svg>
        </div>
        <div
          className="progress-stepper__text"
        >
          <h4>
            Delivered
          </h4>
          <p>
            Guaranteed Wednesday, October 09.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
